--- a/welcome.html
+++ b/welcome.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adu || Ciudadania || TrCult</title>
+    <link rel="stylesheet" href="./welcome.css">
+    <link rel="shortcut icon" href="https://pics.filmaffinity.com/Ad-438513572-large.jpg" type="image/x-icon">
 
+</head>
+<body>
+        <center>
+                <div class="title">
+                        <img src="https://occ-0-1068-92.1.nflxso.net/dnm/api/v6/LmEnxtiAuzezXBjYXPuDgfZ4zZQ/AAAABchVBuqtB7yQ04CKwcU5oF1-3WJXeEZLJd5O_Qy3-gMtBLK3FvWex-Se4CH5PNAiCrscRrkygDyhCkugn7Fi7sPc8yF_z4EOphC1.png?r=e8e" alt="" class="tlt">
+                        <h2 class="stlt">Una pelicula que representa la realidad de la inmigración</h2>
+                        <a href="./characters.html"><button class="see_more">Ver más...</button></a>
+                </div>
+        </center>
+</body>
+</html>
