--- a/realidad.html
+++ b/realidad.html
@@ -34,7 +34,7 @@
     <br>
 <center>
     <a href="./characters.html"><button class="bck_btn"><p class="fa fa-arrow-circle-left"></p> Anterior</button></a>
-    <a href="./causas.html"><button class="nxt_btn">Siguiente <p class="fa fa-arrow-circle-right"></p></button></a>
+    <a href="./causas"><button class="nxt_btn">Siguiente <p class="fa fa-arrow-circle-right"></p></button></a>
 
 </center>
 <footer>
