--- a/reflexion.html
+++ b/reflexion.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <center>
-        <h1>Analisis del cartel de VOX</h1>
+        <h1>Reflexión Final y Soluciones de la inmigración Ilegal</h1>
         <br>
         <br>
         <p>
